--- a/www/assets/css/default.css
+++ b/www/assets/css/default.css
@@ -1,6 +1,29 @@
 body,p,td,div,a,textarea,select {
 	font-family: "Lucida Grande", Tahoma, Arial, Verdana, Helvetica, sans-serif;
-	font-size:11px;
+	
+	}
+
+.navbar-default {
+	background-color:#0072C6;
+	color: white !important;
+	}
+	
+.navbar-default .navbar-nav > li > a {
+	color:white;
+	}
+	
+.navbar-default .navbar-nav > li > a:hover {
+	color:white;
+	}	
+	
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+	background-color:#0072C6;
+	color:white;
+	}
+	
+.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+	color: white;
+	font-weight:bold;
 	}
 
 .body_standard {
@@ -337,34 +360,19 @@ a.calnav{text-decoration:none;font-size:10px;}
 	}
 	
 ul.divleftpanelactions {
-	line-height:18px;	
 	list-style-type:none;
 	list-style-position:outside;
 	margin:0px;	
 	padding:0px;
 	display: list-item;
-	padding-right:6px;
 	}
-
-/*html>body .divleftpanelactions li {
-	width: 100%;
-	}
-
-html>body .divleftpanelactions li a {
-	width: 100%;
-	}*/
 
 ul.divleftpanelactions li {
 	width:100%;
 	padding-left:6px;
 	padding-bottom:5px;
 	}
-	
-ul.divleftpanelactions li:hover, ul.divleftpanelactions li:hover a  {
-	background-color: silver;
-	color:black;
-	}
-	
+		
 ul.divleftpanelactions li a {
 	width:100%;
 	padding:2px;
@@ -1300,7 +1308,7 @@ div.confirmation {
 	
 .div_top_header_info {
 	padding:12px;background-repeat:repeat-x;
-	background-color:#F7F7F7;
+	
 	border-bottom: #DDDDDD solid 1px;
 	font-size:16px;font-weight:bold;
 	color: rgb(150, 163, 56);
