migrate to new default datasource system

--- a/www/assets/css/default.css
+++ b/www/assets/css/default.css
@@ -1229,6 +1229,7 @@ div.confirmation {
 	border-left:#DDDDDD solid 1px;
 	padding-left:20px;
 	vertical-align:top;
+	padding-top: 12px;
 	overflow:auto;
 	}
 	
