--- a/www/assets/css/default.css
+++ b/www/assets/css/default.css
@@ -870,7 +870,10 @@ img.si_img {
 	height:16px;
 	border:0px;
 	margin:3px;
+	margin-right: 8px;
 	vertical-align:middle;
+	float: left;
+	display: block;
 	}
 	
 input.autow, select.autow {
