--- a/www/assets/css/default.css
+++ b/www/assets/css/default.css
@@ -41,6 +41,24 @@ body,p,td,div,a,textarea,select {
 	color: #428bca;
 	}
 	
+.glyphicon-exclamation-sign {
+	color: red;
+	}
+	
+.panel-title {
+	font-weight: bold;
+	clear:both;
+	}
+	
+
+.panel-heading {
+	clear:both;
+	}
+
+.container-fluid .row {
+	padding: 20px;
+	}
+		
 .body_popup {padding:12px;}
 	
 .tbl_bottom_view {
@@ -440,77 +458,6 @@ ul.divleftpanelactions li div:hover {
 	border-top:0px;
 	}
 	
-/* box */
-.div_box {
-	width:100%;
-	margin-bottom:7px;
-	}
-	
-/* div with "header" if more than one sessions */
-.div_box .div_legend {
-	padding: 8px;
-	padding-left:0px;
-	width:100%;		
-	font-weight:bold;
-	}
-	
-.div_box .div_legend .div_caption {
-	font-size: 16px;
-	float:left;
-	text-transform:uppercase;
-	}
-	
-.div_box .div_legend .div_buttons {
-	margin-left:30%;
-	padding:1px;	
-	font-weight:normal;
-	}			
-	
-/* div with content */ 
-.div_box .div_box_content {
-	padding-bottom: 4px;
-	padding-top: 4px;
-	/* no more ordenary padding, because tables in div do not work properly */
-	}
-	
-
-/* fieldsets */
-fieldset.bg_fieldset {
-	border:0px;
-	padding:0px;
-	margin:0px;
-	}
-fieldset.bg_fieldset legend {
-	border-top:0px;
-	padding:4px;
-	padding-left:0px;
-	padding-right:0px;
-	width:100%;
-	border-bottom:silver solid 1px;
-	color:#1E1E1E;
-	font-weight:bold;
-	}
-	
-
-.tbl_overview_header td
-	{
-	border-bottom:silver solid 1px;
-	border-top:silver solid 1px;
-	color: #444444;
-	font-weight:bold;
-	background-color:#EBEBED;
-	}
-
-.tbl_overview_header td a {
-	color:#3764A0;
-	text-decoration:none;
-	font-weight:bold;
-	}
-	
-/* special case with div_box_content ... display no top border */
-.div_box_content .tbl_overview_header td {
-	border-top:0px;
-	}
 	
 /* table with details */
 .table_details {
@@ -518,36 +465,13 @@ fieldset.bg_fieldset legend {
 	border-spacing:0px;
 	border-collapse:collapse;
 	}
-.table_details td {
-	vertical-align:top;
-	/*border-bottom:#EEEEEE solid 1px;*/
-	padding:4px;
+.table_details td { 
+     border-top: none !important; 
 	}
 	
-.table_details .table_overview td {
-	padding:1px;
-	}
-	
-.table_details .table_overview td .si_img {
-	padding:1px;
-	}
-
-/* table header rows */
-.table_details .mischeader td {
-	font-weight: bold;
-	background-image: url(/images/menu/img_bg_gray.gif);
-	padding-top:4px;
-	padding-bottom:4px;
-	padding-left:10px;
-	background-color:#EEEEEE;
-	
-	}
-
 .table_details .field_name {
 	text-align:right;
 	width:18%;
-	/*color:rgb(68, 68, 68);*/
-	/*background-color:rgb(246, 246, 246);*/
 	padding-left:10px;
 	color:gray;
 	font-weight:bold;
