--- a/www/configuration/forms/forms.xml
+++ b/www/configuration/forms/forms.xml
@@ -24,7 +24,7 @@
 	<row>
 		<autopickup>1</autopickup>
 		<autopickup_functionname>CreateUpdateProject</autopickup_functionname>
-		<db_datasource>#request.a_str_db_crm#</db_datasource>
+		<db_datasource></db_datasource>
 		<db_table>projects</db_table>
 		<db_primary>entrykey</db_primary>
 		<columns>1</columns>
